@@ -1,3 +1,7 @@
+Fri Apr 28 17:51:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Added configure checking for getopt.h
+
 Fri Apr 28 17:17:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Add insure and purify configure options.
